regression/fail/datatype.3.sml
datatype t = A
and u = A
